--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@types/styled-components": "^5.1.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-lazy-load-image-component": "^1.5.4",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "5",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
@@ -41,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-lazy-load-image-component": "^1.5.2"
   }
 }
