--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react-icons": "^4.4.0",
     "react-lazy-load-image-component": "^1.5.4",
     "react-responsive-carousel": "^3.2.23",
+    "react-responsive-picture": "^3.2.2",
     "react-router-dom": "5",
     "react-scripts": "5.0.1",
+    "react-scroll-to-top": "^1.0.8",
     "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
