--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-lazy-load": "^3.1.13",
     "react-lazy-load-image-component": "^1.5.4",
     "react-lazyload": "^3.2.0",
+    "react-loading": "^2.0.3",
     "react-responsive-carousel": "^3.2.23",
     "react-responsive-picture": "^3.2.2",
     "react-router-dom": "5",
