--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/styled-components": "^5.1.25",
     "firebase": "^9.8.3",
     "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-lazy-load": "^3.1.13",
