--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
+    "react-h5-audio-player": "^3.8.4",
     "react-icons": "^4.4.0",
     "react-lazy-load": "^3.1.13",
     "react-lazy-load-image-component": "^1.5.4",
